Correction: subtitles assigned per page, header alignment corrected

--- a/project05/app/assets/stylesheets/application.css
+++ b/project05/app/assets/stylesheets/application.css
@@ -13,7 +13,8 @@
 */
 
 #banner {
-	text-align: center;	
+	text-align: left;
+	padding-left: 40%;
 }
 
 #notice {
