--- a/project05/app/assets/stylesheets/listing.css.scss
+++ b/project05/app/assets/stylesheets/listing.css.scss
@@ -18,7 +18,7 @@
 		border: none;
 	}
 
-	.content {
+	#content {
 		height: 300px;
 		overflow: auto;
 	}
